# flux-core

./: .travis.yml  CONTRIBUTING.md  COPYRIGHT  README.md  configure.ac
config/: x_ac_zeromq.m4
doc/man1/: flux-broker.adoc
doc/man3/: tevent.c  tinfo.c  tmrpc_then.c  topen.c  trecv.c  trpc.c  trpc_then.c  tsend.c
doc/test/: spell.en.pws
scripts/: add-lic.sh  check-format  format  lic  lic-lua  remove-lic.sh
src/broker/: Makefile.am  attr.c  attr.h  boot_config.c  boot_config.h  boot_pmi.c  boot_pmi.h  broker.c  cmbd.c  content-cache.c  content-cache.h  exec.c  exec.h  heaptrace.c  heaptrace.h  heartbeat.c  heartbeat.h  hello.c  hello.h  log.c  log.h  modservice.c  modservice.h  module.c  module.h  overlay.c  overlay.h  ping.c  ping.h  publisher.c  publisher.h  reduce.c  reduce.h  runlevel.c  runlevel.h  rusage.c  rusage.h  sequence.c  sequence.h  service.c  (+3 more)
src/cmd/: Makefile.am  builtin.h  cmdhelp.c  cmdhelp.h  flux-attach  flux-comms.c  flux-event.c  flux-exec.c  flux-job.c  flux-jobspec-validate.cpp  flux-jstat.c  flux-keygen.c  flux-kvs.c  flux-logger.c  flux-mini.py  flux-module.c  flux-ping.c  flux-start.c  flux.c
src/common/: Makefile.am  core.h
src/modules/: Makefile.am
src/modules/py_mod/: Makefile.am  echo.py  flux.py  flux_internal.py  fluxmod_ctypes.py  py_mod.c
src/shell/: rlimit.c
src/test/: travis-dep-builder.sh  travis_run.sh
src/test/kap/: Makefile.am  kap.c  kap.h  kap_opts.c  kap_opts.h  kap_personality.c  kap_roles.c  kap_timing.c  kap_timing.h
t/: Makefile.am  fluxometer.lua  t1000-kvs-basic.t  t1005-cmddriver.t
t/barrier/: tbarrier.c
t/ingest/: job-manager-dummy.c
t/issues/: t0505-msg-handler-reg.lua
t/kvs/: blobref.c  commit.c  commit_order.c  dtree.c  fence_invalid.c  fence_namespace_remove.c  hashtest.c  hashtest.cpp  issue1760.c  issue1876.c  torture.c  transactionmerge.c  waitcreate_cancel.c  watch.c  watch_disconnect.c
t/kz/: kzcopy.c
t/loop/: logstderr.c
t/module/: child.c  parent.c
t/mpi/: hello.c
t/reactor/: reactorcat.c
t/request/: req.c  treq.c
t/rexec/: rexec.c  rexec_ps.c  rexec_signal.c
t/scripts/: cpus-allowed.lua  event-trace.lua  (+4 more)
(+490 files in other folders)
